# This file is part of callgrind. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/callgrind/master/COPYRIGHT. No part of callgrind, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of callgrind. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/callgrind/master/COPYRIGHT.


[package]
name = "callgrind"
description = "callgrind"
keywords = ["callgrind"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/callgrind"
repository = "https://github.com/lemonrock/callgrind.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "1.1.0"

[dependencies]
libc = "^0.2"
valgrind_request = "^1.1"
